--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,23 +286,46 @@ ol {
     inset: 0;
     background-size: 100%;
     background-position: bottom;
+    background-repeat: no-repeat;
 }
 
 .referImg {
-    padding-top: 90px;
+    top: 100px;
 }
 
 .referImg p {
-    font-size: 24px;
+    font-size: 22px;
     color: var(--whiteColor);
     font-weight: 500;
     text-align: center;
-    margin-bottom: -20px;
+    margin-bottom:0;
 }
 
 .referImg * {
     position: relative;
     z-index: 2;
+}
+
+.imgLabel {
+    position: absolute;
+    background: #fff;
+    color: #066C7B;
+    border-radius: 31px;
+    top: 14%;
+    padding: 14px 38px 10px;
+    z-index: 4;
+    font-size: 20px;
+    font-weight: bold;
+    box-shadow: 0 6px 20px 0 rgba(0,0,0,0.25);
+}
+
+.imgLabel.imgLabel02 {
+    right: 0;
+    top: 23%;
+}
+
+.imgLabel.imgLabel03 {
+    top: 65%;
 }
 
 .referImg::after {
@@ -312,10 +335,11 @@ ol {
     inset: 0;
     z-index: 0;
     height: 100%;
-    width: 76%;
+    width: 68%;
     transform: translateX(-50%);
-    left: 53%;
+    left: 49%;
     opacity: .3;
+    top: -100px;
 }
 
 /* Privacy Section */
@@ -481,7 +505,7 @@ ol {
     }
 }
 
-@media (max-width: 1439.98px) {
+@media (max-width: 1365.98px) {
     .bannerImg {
         padding-right: 0px;
     }
