--- a/assets/css/style-backup.css
+++ b/assets/css/style-backup.css
@@ -3,7 +3,6 @@
     --transition: .4s all;
     --greenColor: #67C987;
     --whiteColor:#fff;
-    --white200: #F6F7FF;
 }
 
 /* Common Css */
@@ -38,18 +37,11 @@ ol {
     font-size: 100px;
     font-weight: 800;
     text-transform: uppercase;
-    color: #fff;
+    color: var(--whiteColor);
 }
 
 .titleMD.primaryTitle {
     font-size: 80px;
-}
-
-.subTitle {
-    color: #7A7A85;
-    font-size: 32px;
-    font-weight: 700;
-    line-height: 1.3;
 }
 
 .greenBg {
@@ -61,20 +53,26 @@ ol {
 }
 
 /* Banner */
-.buzz_banner {
+.buzzBanner {
     background-color: var(--greenColor);
     background-attachment: fixed;
 }
 
-.logo_bar {
+.buzzBanner 
+ .container {
+    position: relative;
+    z-index: 2;
+}
+
+.logoBar {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 30px 0 50px;
 }
 
-.right_menu span {
-    background: #fff;
+.rightMenu span {
+    background: var(--whiteColor);
     height: 50px;
     width: 50px;
     display: flex;
@@ -86,7 +84,7 @@ ol {
 
 .bannerDes {
     font-size: 40px;
-    color: #fff;
+    color: var(--whiteColor);
     line-height: 1.2;
     margin-top: 10px;
 }
@@ -94,11 +92,21 @@ ol {
 .scannerImg {
     position: absolute;
     bottom: 90px;
-    left: 150px;
+    left: 19%;
+    z-index: 2;
+}
+
+.scannerImg img {
+    -webkit-filter: drop-shadow(15px 25px 25px rgba(0, 0, 0, 0.50));
+    filter: drop-shadow(15px 25px 25px rgba(0, 0, 0, 0.50));
+}
+
+.bannerImg {
+    padding-right: 100px;
 }
 
 .scannerImg span {
-    color: #fff;
+    color: var(--whiteColor);
     font-weight: 700;
     font-size: 24px;
     margin-bottom: 10px;
@@ -108,6 +116,21 @@ ol {
 .bannerIcon {
     position: absolute;
     right: -130px;
+    animation: linear infinite alternate;
+    animation-name: run;
+    animation-duration: 5s;
+}
+
+@keyframes run {
+    0% {
+      right: -15%;
+    }
+    50% {
+      right: -5%;
+    }
+    100% {
+      right: -15%;    
+    }
 }
 
 .bannerLines {
@@ -115,6 +138,14 @@ ol {
     bottom: -50%;
     right: 0;
     width: 1500px;
+}
+
+.bannerRightImg {
+    width: 100%;
+    max-width: 540px;
+    filter: drop-shadow(0 0 0 0.25);
+    -webkit-filter: drop-shadow(65px 35px 65px rgba(0,0,0,0.35));
+    filter: drop-shadow(65px 35px 65px rgba(0,0,0,0.35));
 }
 
 /* Event Section */
@@ -132,9 +163,27 @@ ol {
     list-style: none;
     max-width: 330px;
     font-size: 32px;
-    color: #fff;
+    color: var(--whiteColor);
     font-weight: 600;
     margin: 10px 0 0;
+}
+
+.arrowImg { 
+    animation: linear infinite alternate;
+    animation-name: run1;
+    animation-duration: 5s;
+}
+
+@keyframes run1 {
+    0% {
+      margin-left: 0;
+    }
+    50% {
+      margin-left: 25px;
+    }
+    100% {
+      margin-left: 0;    
+    }
 }
 
 .eventImg {
@@ -144,9 +193,23 @@ ol {
 
 .musicIcon {
     position: absolute;
-    right: -140px;
+    right: -32px;
     top: -70px;
     width: 250px;
+}
+
+.linkBtn {
+    background: rgba(255,255,255,.5);
+    padding: 12px 30px;
+    border-radius: 40px;
+    border: 2px solid #fff;
+    color: #033F49;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 24px;
+    margin-top: 20px;
+    display: inline-block;
+    box-shadow: 0px 4px 16px 0 rgba(0,0,0,0.25);
 }
 
 /* Category Section */
@@ -181,19 +244,6 @@ ol {
     z-index: 1;
 }
 
-/* .categorySection .slick-center + .slick-slide h4, .categorySection .slick-center + .slick-slide + .slick-slide + .slick-slide h4 {
-    font-size: 55px;
-}
-
-.categorySection .slick-slide h4 {
-    font-size: 45px;
-    padding: 16px 10px 8px;
-}
-
-.categorySection .slick-center + .slick-slide + .slick-slide h4 {
-    font-size: 65px;
-} */
-
 .categorySection .sliderOuter h4 {
     font-size: 30px;
     padding: 10px 10px 10px;
@@ -212,36 +262,11 @@ ol {
 }
 
 /* Text Slider */
-/* .slick-slide {
-    transition: .4s;
-    text-align: center;
-}
-
-.slick-center + .slick-slide h4, .slick-center + .slick-slide + .slick-slide + .slick-slide h4 {
-    font-size: 70px;
-}
-
-.slick-slide h4 {
-    font-size: 50px;
-    font-weight: 500;
-    padding: 16px 10px 16px;
-    color: #fff;
-    line-height: normal;
-    text-transform: uppercase;
-}
-
-.slick-center + .slick-slide + .slick-slide h4 {
-    font-size: 90px;
-    font-weight: 700;
-    background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, .4), rgba(255, 255, 255, 0));
-    padding: 24px 10px 16px;
-} */
-
 .sliderOuter h4 {
     font-size: 45px;
     font-weight: 500;
     padding: 12px 10px 12px;
-    color: #fff;
+    color: var(--whiteColor);
     line-height: normal;
     text-transform: uppercase;
     text-align: center;
@@ -287,8 +312,39 @@ ol {
     position: absolute;
     height: 40%;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
 }
+
+.swiper-container {
+    height:760px;
+    overflow:hidden
+}
+
+.swiper-slide {
+    transition: .4s;
+    font-size:45px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    color: #fff;
+}
+
+.swiper-slide-prev, .swiper-slide-next {
+    font-size: 70px;
+}
+
+.swiper-slide-next + .swiper-slide, .swiper-custom + .swiper-slide{
+    font-size: 55px;
+}
+
+.swiper-slide-active {
+    opacity: 1;
+    font-size: 90px;
+    font-weight: 700;
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, .4), rgba(255, 255, 255, 0));
+    padding: 24px 0 16px;
+}
+
 
 /* Refer Section */
 .referSection {
@@ -308,23 +364,47 @@ ol {
     position: absolute;
     inset: 0;
     background-size: 100%;
+    background-position: bottom;
+    background-repeat: no-repeat;
 }
 
 .referImg {
-    padding-top: 90px;
+    top: 100px;
 }
 
 .referImg p {
-    font-size: 24px;
-    color: #fff;
+    font-size: 22px;
+    color: var(--whiteColor);
     font-weight: 500;
     text-align: center;
-    margin-bottom: -20px;
+    margin-bottom:0;
 }
 
 .referImg * {
     position: relative;
     z-index: 2;
+}
+
+.imgLabel {
+    position: absolute;
+    background: #fff;
+    color: #066C7B;
+    border-radius: 31px;
+    top: 14%;
+    padding: 14px 38px 10px;
+    z-index: 4;
+    font-size: 20px;
+    font-weight: bold;
+    box-shadow: 0 6px 20px 0 rgba(0,0,0,0.25);
+}
+
+.imgLabel.imgLabel02 {
+    right: 0;
+    top: 23%;
+}
+
+.imgLabel.imgLabel03 {
+    top: 65%;
 }
 
 .referImg::after {
@@ -334,10 +414,11 @@ ol {
     inset: 0;
     z-index: 0;
     height: 100%;
-    width: 76%;
+    width: 68%;
     transform: translateX(-50%);
-    left: 53%;
+    left: 49%;
     opacity: .3;
+    top: -100px;
 }
 
 /* Privacy Section */
@@ -364,7 +445,7 @@ ol {
 .icon03 {
     position: absolute;
     z-index: 0;
-    bottom: 102px;
+    bottom: 15%;
     left: -50px;
 }
 
@@ -392,6 +473,21 @@ ol {
     position: absolute;
     bottom: -120px;
     left: 30px;
+    animation: linear infinite alternate;
+    animation-name: run2;
+    animation-duration: 5s;
+}
+
+@keyframes run2 {
+    0% {
+      left: 0;
+    }
+    50% {
+      left: 25px;
+    }
+    100% {
+      left: 0;    
+    }
 }
 
 /* Footer Section */
@@ -406,7 +502,7 @@ ol {
 
 .footerLink a {
     display: block;
-    color: #fff;
+    color: var(--whiteColor);
     text-decoration: none;
     font-size: 16px;
     font-weight: 600;
@@ -423,22 +519,58 @@ ol {
     padding: 24px;
     border-top: 1px solid #C6C6C6;
     margin-top: 24px;
-    color: #fff;
+    color: var(--whiteColor);
     font-weight: 400;
 }
 
 
 @media (max-width: 1640px) {
+    .bannerImg {
+        padding-right: 40px;
+    }
+
     .primaryTitle {
-        font-size: 80px;
+        font-size: 75px;
     }
 
     .titleMD.primaryTitle {
         font-size: 60px;
     }
 
+    .sliderOuter h4 {
+        font-size: 40px;
+    }
+
+    .sliderOuter h4:nth-child(3), .sliderOuter h4:nth-child(5) {
+        font-size: 60px;
+    }
+    
+    .sliderOuter h4:nth-child(2), .sliderOuter h4:nth-child(6) {
+        font-size: 45px;
+    }
+    
+    .sliderOuter h4:nth-child(4) {
+        font-size: 80px;
+    }
+
+    .categorySection .sliderOuter h4 {
+        font-size: 25px;
+    }
+
+    .categorySection .sliderOuter h4:nth-child(3), .categorySection .sliderOuter h4:nth-child(5) {
+        font-size: 40px;
+    }
+    
+    .categorySection .sliderOuter h4:nth-child(2), .categorySection .sliderOuter h4:nth-child(6) {
+        font-size: 30px;
+    }
+    
+    .categorySection .sliderOuter h4:nth-child(4) {
+        font-size: 50px;
+    }
+
     .downloadSection h2 {
-        font-size: 90px;
+        font-size: 80px;
         max-width: 1000px;
     }
 
@@ -453,20 +585,76 @@ ol {
     .bannerDes {
         font-size: 32px;
     }
+
+    .eventBox ul {
+        font-size: 24px;
+    }
+
+    .eventImg img {
+        width: 80%;
+    }
+
+    .musicIcon {
+        width: 180px;
+    }
 }
 
-@media (max-width: 1439.98px) {
+@media (max-width: 1365.98px) {
+    .bannerImg {
+        padding-right: 0px;
+    }
+
+    .scannerImg {
+        left: 8%;
+    }
+
+    .bannerIcon {
+        right: 0;
+    }
+
     .primaryTitle {
-        font-size: 70px;
+        font-size: 60px;
     }
 
     .titleMD.primaryTitle {
         font-size: 50px;
     }
 
-    .downloadSection h2 {
+    .sliderOuter h4 {
+        font-size: 30px;
+    }
+
+    .sliderOuter h4:nth-child(3), .sliderOuter h4:nth-child(5) {
+        font-size: 50px;
+    }
+    
+    .sliderOuter h4:nth-child(2), .sliderOuter h4:nth-child(6) {
+        font-size: 35px;
+    }
+    
+    .sliderOuter h4:nth-child(4) {
         font-size: 70px;
-        max-width: 800px;
+    }
+
+    .categorySection .sliderOuter h4 {
+        font-size: 18px;
+    }
+
+    .categorySection .sliderOuter h4:nth-child(3), .categorySection .sliderOuter h4:nth-child(5) {
+        font-size: 30px;
+    }
+    
+    .categorySection .sliderOuter h4:nth-child(2), .categorySection .sliderOuter h4:nth-child(6) {
+        font-size: 20px;
+    }
+    
+    .categorySection .sliderOuter h4:nth-child(4) {
+        font-size: 40px;
+    }
+
+    .downloadSection h2 {
+        font-size: 60px;
+        max-width: 690px;
     }
 
     .icon02 img {
@@ -480,9 +668,42 @@ ol {
     .bannerDes {
         font-size: 28px;
     }
+
+    .scannerImg span {
+        font-size: 16px;
+    }
+
+    .eventBox ul {
+        font-size: 20px;
+    }
+
+    .eventBox img {
+        width: 80%;
+    }
+
+    .icon03 {
+        width: 250px;
+    }
+
+    .sectionPadding {
+        padding-block: 80px;
+    }
+
+    .img01 img {
+        width: 260px;
+    }
+
+    .img02 img {
+        width: 300px;
+    }
 }
 
 @media (max-width: 1199.98px) {
+    .scannerImg {
+        left: 0;
+        width: 200px;
+    }
+
     .primaryTitle {
         font-size: 60px;
     }
@@ -494,4 +715,181 @@ ol {
     .bannerDes {
         font-size: 24px;
     }
+
+    .startImg {
+        width: 200px;
+    }
+
+    .lockMainImg {
+        width: 100%;
+    }
+
+    .referImg p {
+        font-size: 18px;
+        margin-bottom: -10px;
+    }
+
+    .referImg {
+        padding-top: 30px;
+    }
+
+    .icon04 {
+        width: 150px;
+    }
+
+    .icon03 {
+        width: 200px;
+    }
+
+    .downloadSection h2 {
+        font-size: 50px;
+        max-width: 560px;
+    }
+
+    .downloadIcon  a img {
+        width: 170px;
+    }
+
+    .sectionPadding {
+        padding-block: 70px;
+    }
+
+    .startImg {
+        width: 140px;
+        right: 0px;
+    }
+
+    .musicIcon {
+        right: 0;
+        top: -50px;
+    }
+
+    .container {
+        padding-inline: 30px;
+    }
 }
+
+@media (max-width: 991.98px) {   
+   .primaryTitle {
+        font-size: 40px;
+    }
+
+    .titleMD.primaryTitle {
+        font-size: 30px;
+    }
+
+    .bannerDes {
+        font-size: 20px;
+    }
+
+    .sliderOuter h4 {
+        font-size: 16px;
+    }
+
+    .sliderOuter h4:nth-child(3), .sliderOuter h4:nth-child(5) {
+        font-size: 40px;
+    }
+    
+    .sliderOuter h4:nth-child(2), .sliderOuter h4:nth-child(6) {
+        font-size: 30px;
+    }
+    
+    .sliderOuter h4:nth-child(4) {
+        font-size: 60px;
+    }
+
+    .categorySection .sliderOuter h4 {
+        font-size: 16px;
+    }
+
+    .categorySection .sliderOuter h4:nth-child(3), .categorySection .sliderOuter h4:nth-child(5) {
+        font-size: 25px;
+    }
+    
+    .categorySection .sliderOuter h4:nth-child(2), .categorySection .sliderOuter h4:nth-child(6) {
+        font-size: 20px;
+    }
+    
+    .categorySection .sliderOuter h4:nth-child(4) {
+        font-size: 30px;
+    }
+
+    .icon02 {
+        left: -60px;
+    }
+
+    .sectionPadding {
+        padding-block: 60px;
+    }
+    
+    .downloadSection h2 {
+        font-size: 32px;
+        max-width: 360px;
+    }
+}
+
+@media (max-width: 767.98px) {   
+    .sectionPadding {
+        padding-block: 50px;
+    }
+
+    .icon02 img {
+        max-width: 210px;
+    }
+
+    .container {
+        padding-inline: 24px;
+    }
+
+    .img01 img {
+        width: 160px;
+    }
+
+    .img02 img {
+        width: 180px;
+    }
+
+    .sliderOuter h4:nth-child(3), .sliderOuter h4:nth-child(5) {
+        font-size: 30px;
+    }
+    
+    .sliderOuter h4:nth-child(2), .sliderOuter h4:nth-child(6) {
+        font-size: 24px;
+    }
+    
+    .sliderOuter h4:nth-child(4) {
+        font-size: 40px;
+    }
+
+    .icon03 {
+        width: 170px;
+        bottom: 30%;
+        left: 0;
+    }
+
+    .icon01 img {
+        width: 150px;
+    }
+}
+
+@media (max-width: 575.98px) {  
+    .scannerImg {
+        width: 150px;
+    }
+
+    .icon03 {
+        width: 110px;
+        bottom: 30%;
+    }
+
+    .icon04 {
+        width: 100px;
+        top: -31px;
+        right: 10px;
+    }
+
+    .img02 img, .img01 img {
+        width: 120px;
+    }
+}
+
