--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,12 @@ ol {
     background-attachment: fixed;
 }
 
+.buzzBanner 
+ .container {
+    position: relative;
+    z-index: 2;
+}
+
 .logoBar {
     display: flex;
     align-items: center;
@@ -87,6 +93,12 @@ ol {
     position: absolute;
     bottom: 90px;
     left: 19%;
+    z-index: 2;
+}
+
+.scannerImg img {
+    -webkit-filter: drop-shadow(15px 25px 25px rgba(0, 0, 0, 0.50));
+    filter: drop-shadow(15px 25px 25px rgba(0, 0, 0, 0.50));
 }
 
 .bannerImg {
@@ -104,6 +116,21 @@ ol {
 .bannerIcon {
     position: absolute;
     right: -130px;
+    animation: linear infinite alternate;
+    animation-name: run;
+    animation-duration: 5s;
+}
+
+@keyframes run {
+    0% {
+      right: -15%;
+    }
+    50% {
+      right: -5%;
+    }
+    100% {
+      right: -15%;    
+    }
 }
 
 .bannerLines {
@@ -116,6 +143,9 @@ ol {
 .bannerRightImg {
     width: 100%;
     max-width: 540px;
+    filter: drop-shadow(0 0 0 0.25);
+    -webkit-filter: drop-shadow(65px 35px 65px rgba(0,0,0,0.35));
+    filter: drop-shadow(65px 35px 65px rgba(0,0,0,0.35));
 }
 
 /* Event Section */
@@ -124,6 +154,10 @@ ol {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+}
+
+.eventText {
+    margin-left: -80px;
 }
 
 .eventBox ul {
@@ -136,6 +170,24 @@ ol {
     color: var(--whiteColor);
     font-weight: 600;
     margin: 10px 0 0;
+}
+
+.arrowImg { 
+    animation: linear infinite alternate;
+    animation-name: run1;
+    animation-duration: 5s;
+}
+
+@keyframes run1 {
+    0% {
+      margin-left: 0;
+    }
+    50% {
+      margin-left: 25px;
+    }
+    100% {
+      margin-left: 0;    
+    }
 }
 
 .eventImg {
@@ -360,6 +412,21 @@ ol {
     position: absolute;
     right: -50px;
     top: 40px;
+    animation: linear infinite alternate;
+    animation-name: run3;
+    animation-duration: 5s;
+}
+
+@keyframes run3 {
+    0% {
+      right: 0;
+    }
+    50% {
+        right: -50px;
+    }
+    100% {
+        right: 0;    
+    }
 }
 
 /* */
@@ -394,6 +461,27 @@ ol {
     position: absolute;
     bottom: -120px;
     left: 30px;
+    z-index: -1;
+    animation: linear infinite alternate;
+    animation-name: run2;
+    animation-duration: 5s;
+}
+
+@keyframes run2 {
+    0% {
+      left: 0;
+    }
+    50% {
+      left: 25px;
+    }
+    100% {
+      left: 0;    
+    }
+}
+
+.comingSoon {
+    opacity: 0.2;
+    cursor: not-allowed;
 }
 
 /* Footer Section */
@@ -436,11 +524,11 @@ ol {
     }
 
     .primaryTitle {
-        font-size: 75px;
+        font-size: 82px;
     }
 
     .titleMD.primaryTitle {
-        font-size: 60px;
+        font-size: 68px;
     }
 
     .sliderOuter h4 {
@@ -477,7 +565,7 @@ ol {
 
     .downloadSection h2 {
         font-size: 80px;
-        max-width: 1000px;
+        max-width: 920px;
     }
 
     .icon02 img {
@@ -571,6 +659,18 @@ ol {
         bottom: -70px;
     }
 
+    @keyframes run2 {
+        0% {
+          left: -50px;
+        }
+        50% {
+          left: -70px;
+        }
+        100% {
+          left: -50px;    
+        }
+    }
+
     .bannerDes {
         font-size: 28px;
     }
@@ -602,6 +702,22 @@ ol {
     .img02 img {
         width: 300px;
     }
+
+    .imgLabel {
+        font-size: 16px;
+    }
+
+    @keyframes run {
+        0% {
+          right: -10%;
+        }
+        50% {
+          right: 0%;
+        }
+        100% {
+          right: -10%;    
+        }
+    }
 }
 
 @media (max-width: 1199.98px) {
@@ -614,10 +730,6 @@ ol {
         font-size: 60px;
     }
 
-    .titleMD.primaryTitle {
-        font-size: 40px;
-    }
-
     .bannerDes {
         font-size: 24px;
     }
@@ -626,17 +738,8 @@ ol {
         width: 200px;
     }
 
-    .lockMainImg {
-        width: 100%;
-    }
-
     .referImg p {
-        font-size: 18px;
-        margin-bottom: -10px;
-    }
-
-    .referImg {
-        padding-top: 30px;
+        font-size: 16px;
     }
 
     .icon04 {
@@ -670,6 +773,47 @@ ol {
         top: -50px;
     }
 
+    .eventText {
+        margin-left: 0px;
+    }
+
+    .referImg {
+        top: 50px;
+    }
+
+    .referImg::after {
+        top: -50px;
+    }
+
+    .imgLabel {
+        font-size: 16px;
+        padding: 8px 20px;
+    }
+
+    @keyframes run3 {
+        0% {
+          right: 0;
+        }
+        50% {
+            right: -20px;
+        }
+        100% {
+            right: 0;    
+        }
+    }
+
+    @keyframes run {
+        0% {
+          right: -5%;
+        }
+        50% {
+          right: 5%;
+        }
+        100% {
+          right: -5%;    
+        }
+    }
+
     .container {
         padding-inline: 30px;
     }
@@ -677,11 +821,11 @@ ol {
 
 @media (max-width: 991.98px) {   
    .primaryTitle {
-        font-size: 40px;
+        font-size: 50px;
     }
 
     .titleMD.primaryTitle {
-        font-size: 30px;
+        font-size: 40px;
     }
 
     .bannerDes {
@@ -724,6 +868,18 @@ ol {
         left: -60px;
     }
 
+    @keyframes run2 {
+        0% {
+          left: -40px;
+        }
+        50% {
+          left: -60px;
+        }
+        100% {
+          left: -40px;    
+        }
+    }
+
     .sectionPadding {
         padding-block: 60px;
     }
@@ -732,11 +888,27 @@ ol {
         font-size: 32px;
         max-width: 360px;
     }
+
+    .imgLabel.imgLabel02 {
+        top: 30%;
+    }
 }
 
 @media (max-width: 767.98px) {   
     .sectionPadding {
         padding-block: 50px;
+    }
+
+    .bannerIcon {
+        display: none;
+    }
+
+    .primaryTitle {
+        font-size: 42px;
+    }
+
+    .titleMD.primaryTitle {
+        font-size: 32px;
     }
 
     .icon02 img {
@@ -796,6 +968,22 @@ ol {
 
     .img02 img, .img01 img {
         width: 120px;
+    }
+
+    .imgLabel {
+        font-size: 14px;
+    }
+
+    .imgLabel.imgLabel01 {
+        top: 18%;
+    }
+
+    .referImg::after {
+        top: -30px;
+    }
+
+    .referImg {
+        top: 30px;
     }
 }
 
