--- a/assets/css/textSlider.css
+++ b/assets/css/textSlider.css
@@ -52,26 +52,15 @@ ol {
     z-index: 2;
 }
 
-/* Banner */
-.buzzBanner {
-    background-color: var(--greenColor);
-    background-attachment: fixed;
-}
-
-.buzzBanner 
- .container {
-    position: relative;
-    z-index: 2;
-}
-
-.logoBar {
+/* Menu */
+.MenuBar {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 30px 0 50px;
+    padding: 30px 0;
 }
 
-.rightMenu span {
+.MenuBar span {
     background: var(--whiteColor);
     height: 50px;
     width: 50px;
@@ -80,6 +69,41 @@ ol {
     justify-content: center;
     border-radius: 14px;
     box-shadow: 4px 4px 6px 0px rgba(0,0,0,0.2);
+}
+
+.offcanvas-header {
+    padding: 1.5rem 2rem;
+}
+
+.menuLink {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.menuLink a {
+    display: block;
+    text-decoration: none;
+    color: #111;
+    padding: 12px 20px;
+    border-top: 1px solid #ddd;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.menuLink a:hover {
+    color: #066C7B;
+}
+
+/* Banner */
+.buzzBanner {
+    background-color: var(--greenColor);
+    background-attachment: fixed;
+}
+
+.buzzBanner .container {
+    position: relative;
+    z-index: 2;
 }
 
 .bannerDes {
@@ -154,6 +178,10 @@ ol {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+}
+
+.eventText {
+    margin-left: -80px;
 }
 
 .eventBox ul {
@@ -312,39 +340,8 @@ ol {
     position: absolute;
     height: 40%;
     width: 100%;
-    z-index: 2;
+    z-index: 1;
 }
-
-.swiper-container {
-    height:760px;
-    overflow:hidden
-}
-
-.swiper-slide {
-    transition: .4s;
-    font-size:45px;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    color: #fff;
-}
-
-.swiper-slide-prev, .swiper-slide-next {
-    font-size: 70px;
-}
-
-.swiper-slide-next + .swiper-slide, .swiper-custom + .swiper-slide{
-    font-size: 55px;
-}
-
-.swiper-slide-active {
-    opacity: 1;
-    font-size: 90px;
-    font-weight: 700;
-    background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, .4), rgba(255, 255, 255, 0));
-    padding: 24px 0 16px;
-}
-
 
 /* Refer Section */
 .referSection {
@@ -396,15 +393,23 @@ ol {
     font-size: 20px;
     font-weight: bold;
     box-shadow: 0 6px 20px 0 rgba(0,0,0,0.25);
+    left: 0;
 }
 
 .imgLabel.imgLabel02 {
     right: 0;
     top: 23%;
+    left: auto;
 }
 
 .imgLabel.imgLabel03 {
     top: 65%;
+}
+
+.imgLabel.imgLabel04 {
+    position: relative;
+    margin: 0 auto;
+    top: 0;
 }
 
 .referImg::after {
@@ -419,6 +424,7 @@ ol {
     left: 49%;
     opacity: .3;
     top: -100px;
+    display: none;
 }
 
 /* Privacy Section */
@@ -439,6 +445,21 @@ ol {
     position: absolute;
     right: -50px;
     top: 40px;
+    animation: linear infinite alternate;
+    animation-name: run3;
+    animation-duration: 5s;
+}
+
+@keyframes run3 {
+    0% {
+      right: 0;
+    }
+    50% {
+        right: -50px;
+    }
+    100% {
+        right: 0;    
+    }
 }
 
 /* */
@@ -473,6 +494,7 @@ ol {
     position: absolute;
     bottom: -120px;
     left: 30px;
+    z-index: -1;
     animation: linear infinite alternate;
     animation-name: run2;
     animation-duration: 5s;
@@ -488,6 +510,11 @@ ol {
     100% {
       left: 0;    
     }
+}
+
+.comingSoon {
+    opacity: 0.2;
+    cursor: not-allowed;
 }
 
 /* Footer Section */
@@ -511,7 +538,7 @@ ol {
 
 .footerSocial a {
     display: inline-block;
-    margin: 0px 8px;
+    margin: 0px 4px;
 }
 
 .copyRight {
@@ -524,17 +551,39 @@ ol {
 }
 
 
+/* Privacy Policy */
+.privacyContent p {
+    color: #7A7A85;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.6;
+}
+
+.privacyContent p strong {
+    display: block;
+    color: #111;
+    margin: 24px 0 -20px;
+    font-size: 24px;
+}
+
+.privacyContent a {
+    text-decoration: underline;
+    color: #333;
+}
+
+
+
 @media (max-width: 1640px) {
     .bannerImg {
         padding-right: 40px;
     }
 
     .primaryTitle {
-        font-size: 75px;
+        font-size: 82px;
     }
 
     .titleMD.primaryTitle {
-        font-size: 60px;
+        font-size: 68px;
     }
 
     .sliderOuter h4 {
@@ -571,7 +620,7 @@ ol {
 
     .downloadSection h2 {
         font-size: 80px;
-        max-width: 1000px;
+        max-width: 920px;
     }
 
     .icon02 img {
@@ -665,6 +714,18 @@ ol {
         bottom: -70px;
     }
 
+    @keyframes run2 {
+        0% {
+          left: -50px;
+        }
+        50% {
+          left: -70px;
+        }
+        100% {
+          left: -50px;    
+        }
+    }
+
     .bannerDes {
         font-size: 28px;
     }
@@ -696,6 +757,30 @@ ol {
     .img02 img {
         width: 300px;
     }
+
+    .imgLabel {
+        font-size: 16px;
+    }
+
+    .privacyContent p {
+        font-size: 18px;
+    }
+    
+    .privacyContent p strong {
+        font-size: 22px;
+    }
+
+    @keyframes run {
+        0% {
+          right: -10%;
+        }
+        50% {
+          right: 0%;
+        }
+        100% {
+          right: -10%;    
+        }
+    }
 }
 
 @media (max-width: 1199.98px) {
@@ -708,10 +793,6 @@ ol {
         font-size: 60px;
     }
 
-    .titleMD.primaryTitle {
-        font-size: 40px;
-    }
-
     .bannerDes {
         font-size: 24px;
     }
@@ -720,17 +801,8 @@ ol {
         width: 200px;
     }
 
-    .lockMainImg {
-        width: 100%;
-    }
-
     .referImg p {
-        font-size: 18px;
-        margin-bottom: -10px;
-    }
-
-    .referImg {
-        padding-top: 30px;
+        font-size: 16px;
     }
 
     .icon04 {
@@ -764,18 +836,71 @@ ol {
         top: -50px;
     }
 
+    .eventText {
+        margin-left: 0px;
+    }
+
+    .referImg {
+        top: 50px;
+    }
+
+    .referImg::after {
+        top: -50px;
+    }
+
+    .imgLabel {
+        font-size: 16px;
+        padding: 8px 20px;
+    }
+
+    @keyframes run3 {
+        0% {
+          right: 0;
+        }
+        50% {
+            right: -20px;
+        }
+        100% {
+            right: 0;    
+        }
+    }
+
+    @keyframes run {
+        0% {
+          right: -5%;
+        }
+        50% {
+          right: 5%;
+        }
+        100% {
+          right: -5%;    
+        }
+    }
+
     .container {
         padding-inline: 30px;
+    }
+
+    .linkBtn {
+        font-size: 20px;
+    }
+
+    .privacyContent p {
+        font-size: 16px;
+    }
+    
+    .privacyContent p strong {
+        font-size: 20px;
     }
 }
 
 @media (max-width: 991.98px) {   
    .primaryTitle {
-        font-size: 40px;
+        font-size: 50px;
     }
 
     .titleMD.primaryTitle {
-        font-size: 30px;
+        font-size: 40px;
     }
 
     .bannerDes {
@@ -818,6 +943,18 @@ ol {
         left: -60px;
     }
 
+    @keyframes run2 {
+        0% {
+          left: -40px;
+        }
+        50% {
+          left: -60px;
+        }
+        100% {
+          left: -40px;    
+        }
+    }
+
     .sectionPadding {
         padding-block: 60px;
     }
@@ -826,11 +963,27 @@ ol {
         font-size: 32px;
         max-width: 360px;
     }
+
+    .imgLabel.imgLabel02 {
+        top: 30%;
+    }
 }
 
 @media (max-width: 767.98px) {   
     .sectionPadding {
         padding-block: 50px;
+    }
+
+    .bannerIcon {
+        display: none;
+    }
+
+    .primaryTitle {
+        font-size: 42px;
+    }
+
+    .titleMD.primaryTitle {
+        font-size: 32px;
     }
 
     .icon02 img {
@@ -870,6 +1023,26 @@ ol {
     .icon01 img {
         width: 150px;
     }
+
+    .referSection::after {
+        background-repeat: repeat;
+    }
+
+    .linkBtn {
+        font-size: 18px;
+    }
+
+    .privacyContent p {
+        font-size: 15px;
+    }
+    
+    .privacyContent p strong {
+        font-size: 18px;
+    }
+
+    .logoBar {
+        padding: 20px 0;
+    }
 }
 
 @media (max-width: 575.98px) {  
@@ -891,5 +1064,77 @@ ol {
     .img02 img, .img01 img {
         width: 120px;
     }
+
+    .imgLabel {
+        font-size: 14px;
+    }
+
+    .imgLabel.imgLabel01 {
+        top: 18%;
+    }
+
+    .referImg::after {
+        top: -30px;
+    }
+
+    .referImg {
+        top: 30px;
+    }
+
+    .icon01 img {
+        width: 110px;
+    }
+
+    .icon02 {
+        left: 0;
+        bottom: 30px;
+    }
+
+    .icon02 img {
+        max-width: 140px;
+    }
+
+    @keyframes run2 {
+        0% {
+          left: -25px;
+        }
+        50% {
+          left: -45px;
+        }
+        100% {
+          left: -25px;    
+        }
+    }
 }
 
+
+
+.swiper-container {
+    height:760px;
+    overflow:hidden
+}
+
+.swiper-slide {
+    transition: .4s;
+    font-size:45px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    color: #fff;
+}
+
+.swiper-slide-prev, .swiper-slide-next {
+    font-size: 70px;
+}
+
+.swiper-slide-next + .swiper-slide, .swiper-custom + .swiper-slide{
+    font-size: 55px;
+}
+
+.swiper-slide-active {
+    opacity: 1;
+    font-size: 90px;
+    font-weight: 700;
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, .4), rgba(255, 255, 255, 0));
+    padding: 24px 0 16px;
+}
