--- a/assets/css/textSlider.css
+++ b/assets/css/textSlider.css
@@ -340,7 +340,7 @@ ol {
     position: absolute;
     height: 40%;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
 }
 
 /* Refer Section */
@@ -573,6 +573,39 @@ ol {
 
 
 
+/* Text slider */
+.swiperTextSlider {
+    height:760px;
+    overflow:hidden
+}
+
+.swiperTextSlider .swiper-slide {
+    transition: .4s;
+    font-size:45px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.swiperTextSlider .swiper-slide-prev, .swiperTextSlider .swiper-slide-next {
+    font-size: 70px;
+}
+
+.swiperTextSlider .swiper-slide-next + .swiper-slide, .swiperTextSlider .swiper-custom + .swiper-slide{
+    font-size: 55px;
+}
+
+.swiperTextSlider .swiper-slide-active {
+    opacity: 1;
+    font-size: 80px;
+    font-weight: 700;
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, .4), rgba(255, 255, 255, 0));
+    padding: 24px 0 16px;
+}
+
+
 @media (max-width: 1640px) {
     .bannerImg {
         padding-right: 40px;
@@ -781,6 +814,27 @@ ol {
           right: -10%;    
         }
     }
+
+    .swiperTextSlider {
+        height:670px;
+    }
+    
+    .swiperTextSlider .swiper-slide {
+        font-size:35px;
+    }
+    
+    .swiperTextSlider .swiper-slide-prev, .swiperTextSlider .swiper-slide-next {
+        font-size: 60px;
+    }
+    
+    .swiperTextSlider .swiper-slide-next + .swiper-slide, .swiperTextSlider .swiper-custom + .swiper-slide{
+        font-size: 45px;
+    }
+    
+    .swiperTextSlider .swiper-slide-active {
+        font-size: 70px;
+        padding: 24px 0 16px;
+    }
 }
 
 @media (max-width: 1199.98px) {
@@ -891,6 +945,27 @@ ol {
     
     .privacyContent p strong {
         font-size: 20px;
+    }
+
+    .swiperTextSlider {
+        height:610px;
+    }
+    
+    .swiperTextSlider .swiper-slide {
+        font-size:30px;
+    }
+    
+    .swiperTextSlider .swiper-slide-prev, .swiperTextSlider .swiper-slide-next {
+        font-size: 55px;
+    }
+    
+    .swiperTextSlider .swiper-slide-next + .swiper-slide, .swiperTextSlider .swiper-custom + .swiper-slide{
+        font-size: 40px;
+    }
+    
+    .swiperTextSlider .swiper-slide-active {
+        font-size: 65px;
+        padding: 24px 0 16px;
     }
 }
 
@@ -1043,6 +1118,27 @@ ol {
     .logoBar {
         padding: 20px 0;
     }
+
+    .swiperTextSlider {
+        height:350px;
+    }
+    
+    .swiperTextSlider .swiper-slide {
+        font-size:16px;
+    }
+    
+    .swiperTextSlider .swiper-slide-prev, .swiperTextSlider .swiper-slide-next {
+        font-size: 30px;
+    }
+    
+    .swiperTextSlider .swiper-slide-next + .swiper-slide, .swiperTextSlider .swiper-custom + .swiper-slide{
+        font-size: 25px;
+    }
+    
+    .swiperTextSlider .swiper-slide-active {
+        font-size: 40px;
+        padding: 24px 0 16px;
+    }
 }
 
 @media (max-width: 575.98px) {  
@@ -1109,32 +1205,3 @@ ol {
 
 
 
-.swiper-container {
-    height:760px;
-    overflow:hidden
-}
-
-.swiper-slide {
-    transition: .4s;
-    font-size:45px;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    color: #fff;
-}
-
-.swiper-slide-prev, .swiper-slide-next {
-    font-size: 70px;
-}
-
-.swiper-slide-next + .swiper-slide, .swiper-custom + .swiper-slide{
-    font-size: 55px;
-}
-
-.swiper-slide-active {
-    opacity: 1;
-    font-size: 90px;
-    font-weight: 700;
-    background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, .4), rgba(255, 255, 255, 0));
-    padding: 24px 0 16px;
-}
