--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,7 +269,7 @@ ol {
     position: absolute;
     height: 40%;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
 }
 
 .categorySection .sliderOuter h4 {
@@ -632,6 +632,20 @@ ol {
     aspect-ratio: 16/9;
     width: 100%;
     border-radius: 10px;
+}
+
+.videoCard span {
+    position: absolute;
+    z-index: 2;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(255,255,255,0.8);
+    color: #000;
+    font-size: 34px;
+    overflow: hidden;
 }
 
 
